--- a/politicas.html
+++ b/politicas.html
@@ -10,7 +10,7 @@
 <body>
     <div class="bg"></div>
     <div class="shade">
-        <img src="assets/imgs/icon.png" width="20%">
+        <img src="assets/imgs/icon.png" width="20%" style="padding-top: 2em;">
         <h1>
             Política de Uso de Dados – Bang!
         </h1>
