download button added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <audio src="assets/audio/click.wav" id="click" preload="auto"></audio>
-    <div class="menu_open" id="menu_open">
+    <div class="menu_open" id="menu_open" style="display: none;">
         <img src="assets/imgs/icon.png" alt="icon" width="30%" style="margin-bottom: 5em;">
         <div style="width: 40%;"></div>
         <a href="#Download" onclick="closeMenu()">Download</a>
@@ -159,7 +159,7 @@
             <img class="invisible delay" src="assets/imgs/playStore.png" alt="PlayStore" width="30%">
             <br>
             <h2 class="invisible delay">Teste Agora</h2>
-            <button onclick="playClick()" class="invisible delay">Download</button>
+            <button onclick="baixarApp()" class="invisible delay">Download</button>
         </div>
     <div class="politicas invisible">
             <h1 class="titulo" id="Politicas">Politicas</h1>
