--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             </div>
         </div>
     </div>
-    <div class="historia invisible">
+    <div class="historia invisible" >
         <h1 class="titulo" id="historia">História</h1>
-        <div class="pagina">
+        <div class="pagina" id="historiaScroll">
             <audio src="assets/audio/typeWrite.mp3" preload="auto" id="typewrite"></audio>
             <pre id="lore">
             </pre>
